Initial functionality and very basic colors

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <body>
   <main>
     <h1>Bubble Sort Visualizer</h1>
-    <button id="btn">Sort</button>
+    <div class="buttons">
+      <button id="btnSort">Sort</button>
+      <button id="btnReset">Reset</button>
+
+    </div>
     <div id="box"></div>
   </main>
 </body>
