added speed selection and reset button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
   <main>
     <h1>Bubble Sort Visualizer</h1>
     <div class="buttons">
+      <label for="speed">Speed 
+        <select id="speed">
+          <option value="250">Slow</option>
+          <option value="100" selected>Medium</option>
+          <option value="20">Fast</option>
+        </select>
+      </label>
       <button id="btnSort">Sort</button>
       <button id="btnReset">Reset</button>
 
